Add week 6 mongodb material

--- a/big-data-integration-processing/week5-2.ipynb
+++ b/big-data-integration-processing/week5-2.ipynb
@@ -87,7 +87,7 @@
    ],
    "source": [
     "from pyspark.streaming import StreamingContext\n",
-    "ssc = StreamingContext(sc,1)\n"
+    "ssc = StreamingContext(sc,1) # 1 specifies a batch interval of one second.\n"
    ]
   },
   {
@@ -135,7 +135,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "window = vals.window(10,5)"
+    "window = vals.window(10,5) #combines the ten seconds worth of data and moves by five seconds."
    ]
   },
   {
@@ -214,8 +214,8 @@
   },
   "orig_nbformat": 2,
   "kernelspec": {
-   "name": "python36664bitalexlvirtualenvb9f0b0a3af2a4e06a89ee778b9503914",
-   "display_name": "Python 3.6.6 64-bit ('alexl': virtualenv)"
+   "name": "python36664bitbaseconda80ab881b08fc4123973af10a07e0b9cc",
+   "display_name": "Python 3.6.6 64-bit ('base': conda)"
   }
  },
  "nbformat": 4,
