Update week 6 materials and answers

--- a/big-data-integration-processing/week6-1.ipynb
+++ b/big-data-integration-processing/week6-1.ipynb
@@ -4,15 +4,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### MongoDB  and pandas exercises\n",
+    "## MongoDB  and pandas exercises\n",
     "#### The first part oftutorial is intended for windows users, which failed / not able to install the VM in the course \"big-data-integration-processing\" in coursera.\n",
-    "#### The second part of tutorial are examples of pandas li\n",
+    "#### The second part of tutorial are examples of quizzes\n",
     "\n",
     "1. Navigate to [MongoDB Download Center] and downad `.msi ` files\n",
     "2. run `.msi` files and install MongoDB on C drive. Installing on other drives may cause MongoDB to malfunction and `\\bin` folder not found.\n",
     "3. Go to `C:\\Program Files\\MongoDB\\Server\\4.2\\bin` and run `mongo.exe`. A MongoDB console will be opened\n",
     "4. copy `\\dump` folder from the course material `big-data-course-3.zip` in `\\bin` folder\n",
-    "5. Run `mongorestore` in MongoDB console and database are restored.\n",
+    "5. Run `mongorestore` in another windows console and database are restored.\n",
     "6. Type the following MongoDB commands for exercise.\n"
    ]
   },
@@ -97,50 +97,66 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "db.users.find({ 'user.Location' : { $exists: true, $ne: null } }); #6937"
+    "#### Query 1:\n",
+    "db.users.find({ 'user.Location' : { \\$exists: true, \\$ne: null } }); #6937"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "db.users.find({$where : \"this.tweet_followers_count > this.user.FriendsCount\"}).count() #5809"
+    "#### Query 2:\n",
+    "db.users.find({\\$where : \"this.tweet_followers_count > this.user.FriendsCount\"}).count() #5809"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "db.users.find({$text : {$search : \"http://\"}}, {tweet_text :1, _id: 0}) #48"
+    "#### Query 3:\n",
+    "db.users.find({\\$text : {\\$search : \"http://\"}}, {tweet_text :1, _id: 0}) #48"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "db.users.find({$text : {$search : \"\\\"England\\\" \\\"EURO 2016\\\" -UEFA\"}}, {tweet_text :1, _id: 0}) \n",
-    "#quote the words to use AND opearator of text search in MongoDB."
+    "#### Query 4:\n",
+    "#### Quote the words to use AND opearator of text search in MongoDB.\n",
+    "\n",
+    "see https://stackoverflow.com/questions/23985464/how-to-and-and-not-in-mongodb-text-search for examples\n",
+    "\n",
+    "db.users.find({\\$text : {\\$search : \"\\\"England\\\" \\\"EURO 2016\\\" -UEFA\"}}, {tweet_text :1, _id: 0}) \n"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
+    "#### Query 5:\n",
+    "#### Remember to add quote `''` when accessing nested layer.\n",
+    "\n",
     "db.users.find({$and: [{'tweet_text' : /UEFA/}, {'user.Location' : \"Ireland\"}]}, {'user.FriendsCount' :1, 'user_name' :2, _id: 0})"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Export MongoDB to csv file\n",
+    "1. Open a windows console in your MongoDB installed folder `C:\\Program Files\\MongoDB\\Server\\4.2\\bin`\n",
+    "2. Type the command `mongoexport --db sample --collection users --type csv --fields \"tweet_text\" --out tweets.csv`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -154,9 +170,13 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": 3
+   "version": "3.6.6-final"
   },
-  "orig_nbformat": 2
+  "orig_nbformat": 2,
+  "kernelspec": {
+   "name": "python36664bitalexlvirtualenvb9f0b0a3af2a4e06a89ee778b9503914",
+   "display_name": "Python 3.6.6 64-bit ('alexl': virtualenv)"
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
