--- a/big-data-integration-processing/week4.ipynb
+++ b/big-data-integration-processing/week4.ipynb
@@ -2,23 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "error",
-     "ename": "ValueError",
-     "evalue": "Cannot run multiple SparkContexts at once; existing SparkContext(app=sample app for reading files, master=local[20]) created by __init__ at <ipython-input-1-0704b9424f5b>:13 ",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-6-0704b9424f5b>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     11\u001b[0m         . set(\"spark.executor.memory\", \"2g\"))\n\u001b[0;32m     12\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 13\u001b[1;33m \u001b[0msc\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mSparkContext\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mconf\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mconf\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;32mD:\\Users\\alexl\\Anaconda3\\Lib\\site-packages\\pyspark\\context.py\u001b[0m in \u001b[0;36m__init__\u001b[1;34m(self, master, appName, sparkHome, pyFiles, environment, batchSize, serializer, conf, gateway, jsc, profiler_cls)\u001b[0m\n\u001b[0;32m    125\u001b[0m                 \" is not allowed as it is a security risk.\")\n\u001b[0;32m    126\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 127\u001b[1;33m         \u001b[0mSparkContext\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_ensure_initialized\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mgateway\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mgateway\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mconf\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mconf\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    128\u001b[0m         \u001b[1;32mtry\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    129\u001b[0m             self._do_init(master, appName, sparkHome, pyFiles, environment, batchSize, serializer,\n",
-      "\u001b[1;32mD:\\Users\\alexl\\Anaconda3\\Lib\\site-packages\\pyspark\\context.py\u001b[0m in \u001b[0;36m_ensure_initialized\u001b[1;34m(cls, instance, gateway, conf)\u001b[0m\n\u001b[0;32m    333\u001b[0m                         \u001b[1;34m\" created by %s at %s:%s \"\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    334\u001b[0m                         % (currentAppName, currentMaster,\n\u001b[1;32m--> 335\u001b[1;33m                             callsite.function, callsite.file, callsite.linenum))\n\u001b[0m\u001b[0;32m    336\u001b[0m                 \u001b[1;32melse\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    337\u001b[0m                     \u001b[0mSparkContext\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_active_spark_context\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0minstance\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mValueError\u001b[0m: Cannot run multiple SparkContexts at once; existing SparkContext(app=sample app for reading files, master=local[20]) created by __init__ at <ipython-input-1-0704b9424f5b>:13 "
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import os\n",
     "# absolute path to this file\n",
@@ -27,12 +13,11 @@
     "from pyspark import SparkConf, SparkContext, SQLContext\n",
     "# Create a spark configuration with 20 threads.\n",
     "# This code will run locally on master\n",
-    "conf = (SparkConf ()\n",
-    "        . setMaster(\"local[20]\")\n",
-    "        . setAppName(\"sample app for reading files\")\n",
-    "        . set(\"spark.executor.memory\", \"2g\"))\n",
-    "\n",
-    "sc = SparkContext(conf=conf)"
+    "# conf = (SparkConf ()\n",
+    "#         . setMaster(\"local[20]\")\n",
+    "#         . setAppName(\"sample app for reading files\")\n",
+    "#         . set(\"spark.executor.memory\", \"2g\"))\n",
+    "\n"
    ]
   },
   {
@@ -50,6 +35,7 @@
     }
    ],
    "source": [
+    "sc = SparkContext(conf=conf)\n",
     "#get file from local paths instead of HDFS.\n",
     "#lines.sc.textFile(\"hdfs:/user/cloudera/words.txt\")\n",
     "lines = sc.textFile(os.path.join (cwd, \"big-data-3\\spark-wordcount\\words.txt\"))\n",
