--- a/machine-learning/HSE-AML-8.ipynb
+++ b/machine-learning/HSE-AML-8.ipynb
@@ -159,7 +159,8 @@
     "\n",
     "- Non differentiable but can be optimized directly\n",
     "- Absolute values make some sense\n",
-    "- Tolerate outliers, thus more robust"
+    "- Tolerate outliers, thus more robust\n",
+    "- In MSE average is a minimizer, here it is a median"
    ]
   },
   {
@@ -177,7 +178,8 @@
     "$$\n",
     "R^2 = 1 - \\frac{\\textit{residual sum} = MAE(y, \\hat y)}{\\textit{explained sum} = MAE(\\overline y, \\hat y)}\n",
     "$$\n",
-    "- Basically tells the correlation between"
+    "- Basically tells the correlation between ground truth and predictions\n",
+    "- Highest number = 1"
    ]
   },
   {
@@ -392,7 +394,9 @@
     "- If you want to combine two values average is the usual thing\n",
     "- Actually, to combine two ratios it is wise to use harmonic average called $F_1$\n",
     "$F_1 = \\frac{2pr}{p+r}$\n",
-    "- Precision=0.1, Recall=0.9, what are the averages: arithmetic and harmonic?"
+    "- Precision=0.1, Recall=0.9, what are the averages: arithmetic and harmonic?\n",
+    "- Arithmetic: (0.1+0.9)/2=0.5\n",
+    "- Harmonic = 0.42"
    ]
   },
   {
@@ -420,8 +424,8 @@
     "### Receiver Operator Characteristics (ROC) curve\n",
     "\n",
     "- Plot for all thresholds points (FPR, TPR)\n",
-    "- FPR is the rate of false positives over all positives\n",
-    "- TPR is the rate of true positives over all positives"
+    "- FPR is the rate of false positives over all positives (sensitivity)\n",
+    "- TPR is the rate of true positives over all positives (specificity)"
    ]
   },
   {
